fix line spacing

--- a/app/assets/stylesheets/handout.css.sass
+++ b/app/assets/stylesheets/handout.css.sass
@@ -66,13 +66,13 @@ h2
     .content
       margin-left: 190px
 
-  dl
-    margin: 1em 0
   dt
+    padding: 0.5em 0
     font-weight: bold
     font-family: $title-font
     float: left
     clear: left
   dd
+    padding: 0.5em 0
     margin-left: 190px
 
